--- a/mainReact/src/ProyectoFinal/style.css
+++ b/mainReact/src/ProyectoFinal/style.css
@@ -1,174 +1,85 @@
-@import url('https://fonts.googleapis.com/css2?family=Lilita+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Rowdies:wght@300;400;700&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 
 /* ================================= GLOBAL ================================= */
-
-/*
-html, body{ 
-    overflow-x: hidden; 
-}
-*/
-
-html {
+html { /* Color del Background del HTML (overflow en el eje Y) */
     background-color: rgb(30, 30, 30);
 }
-
-:root {
-    --main-bg-color: black;
-    --secondary-bg-color: rgb(255, 145, 0);
-    --main-letter-color: rgb(255, 0, 0, 0.6); /* el color es similar a text-danger-emphasis, pero no es el mismo */
+:root { /* Variable de estilos utilizados con frecuencia */
+    --bg-gradient: linear-gradient(0deg, rgba(33,37,41,1) 0%, rgba(27,25,40,1) 50%, rgba(33,37,41,1) 100%);;
 }
-
-.bg-transp {
-    background-color: transparent;
+.bg-gradient { /* Gradiente de fondo */
+    background: var(--bg-gradient) !important;
 }
-
-.main-letter {
-    color: var(--main-letter-color);
-}
-
-.main-bg-color { /* Color principal de fondo */
-    background: rgb(33,37,41);
-    background: linear-gradient(0deg, rgba(33,37,41,1) 10%, rgba(16,45,66,1) 30%, rgba(16,45,66,1) 70%, rgba(33,37,41,1) 90%);
-}
-
-.padding-custom { /* Padding frecuente */
+.padding-custom { /* Padding utilizado en AboutUs, Footer & ItemDetail */
     padding-inline: 10vw;
 }
-
-.font-family-custom { /* Fuente letra BK */
-    font-family: 'Lilita One', sans-serif;
-}
-
-.logo { /* Logo BK */
+/* ================================= LOGO ================================= */
+.logo { /* Logo de GiGames */
     transition: all 0.25s;
 }
-
 .logo:hover {
     transform: scale(1.1);
 }
-
-/* ================================= HEADER ================================= */
-.navbar-link{
+/* ================================= NAVBAR ================================= */
+.navbar-link{ /* Enlaces del Navbar: Juegos / Playstation / Xbox / PC / Nintendo */
     font-size: 14px;
+    font-family: 'Ubuntu', sans-serif;
     border-radius: 16px;
     color: white;
 }
-
 .navbar-link:hover {
     color: rgb(255, 255, 255);
     background-color: rgba(255, 255, 255, 0.1);
 }
-
 .navbar-link:focus{
     color: rgb(0, 0, 0);
     background-color: rgb(255, 255, 255);;
 }
-
-/* ================================= MAIN ================================= */
-
-.carousel-caption {
-    max-width: 100%;
-    width:100%;
-    background-color: rgba(0, 0, 0, 0.7);
-    left: 0;
+/* ================================= CAROUSEL ================================= */
+.carousel-indicators { /* Indicadores de Slide del Carousel */
+    background-color: rgba(0, 0, 0, 0.5);
 }
-.carousel-caption h2 {
-    font-size: 1rem;
+.carousel-indicators button {
+    width: 1.5vw !important;
+    height: 0.5vh !important;
 }
-.carousel-caption p {
-    font-size: 1em;
-    margin-inline: 5%;
+/* ================================= ABOUT US ================================= */
+.font-gigames {
+    font-family: 'Rowdies', sans-serif;
 }
-
-.coupon-custom {
-    width: 352px;
-    border-radius: 16px;
-}
-
-.locals {
-    border-radius: 12px;
-}
-
-.locals-bg-custom {
-    background-color: var(--secondary-bg-color) !important;
-}
-
-.locals-margin-custom {
-    margin-inline: 9vw;
-}
-
-.news-custom {
-    width: 352px;
-    border-radius: 16px;
-}
-
-.news-custom:hover{
-    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
-}
-
-.app-bg {
-    background-color: rgb(230, 23, 0);
-}
-
-.app-font-size-title {
-    font-size: 64px;
-}
-
-.app-store-size {
-    width: 168px;
-    height: 48px;
-}
-
-.app-font-size-desc {
-    font-size: 12px;
-}
-
-/* ================================= FOOTER ================================= */
-.footer {
-    background-color: #502314;
-}
-
-.a-custom {
-    text-decoration: none;
-    color: white;
-}
-
-.a-custom:hover {
-    color: rgb(198, 0, 0);
-}
-
-.rrss-logo {
-    width: 24px; 
-}
-
-/* ================================= ITEM-LIST & ITEM-DETAIL ================================= */
-.product-card{
-    transition: all 0.25s;
-}
-
-.product-card:hover{
-    transform: scale(1.02);
-    cursor: pointer;
-}
-
-.product-card img{
-    width: 100%;
-    aspect-ratio: 3/2;
-    object-fit: contain;
-}
-
-.product-detail {
-    width: 50%;
-    aspect-ratio: 4/2;
-    object-fit: contain;
-}
-
-.padding-detail {
-    padding-inline: 20vw;
+.text-justify {
+    text-align: justify;
 }
 
 /* ================================= CART ================================= */
-
-.cart-bg { 
-    background-color: var(--main-bg-color) !important;
+.font-cart {
+    font-family: 'Rowdies', sans-serif;
 }
+.col-trash {
+    width: 11rem;
+}
+/* ================================= GAME (CARD) ================================= */
+.game-card{
+    transition: all 0.25s;
+}
+.game-card:hover{
+    transform: scale(1.01);
+    box-shadow: 0px 0px 6px white;
+    cursor: pointer;
+}
+.title, .price {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1em;
+    margin-block: 0px;
+    margin-inline: 5px;
+}
+.game-title, .game-price {
+    margin: 0;
+    padding: 0;
+    color: white;
+    background-color: #00000080;
+}
+.game-title {
+    min-height: 65px;
+}
+
