Proyecto terminado. Puedo hacer el deploy, hacerlo Responsive y mejorar el boton de generar orden.

--- a/mainReact/src/ProyectoFinal/style.css
+++ b/mainReact/src/ProyectoFinal/style.css
@@ -85,3 +85,7 @@ html { /* Color del Background del HTML (overflow en el eje Y) */
 .col-trash {
     width: 11rem;
 }
+/* ================================= CHECKOUT ================================= */
+/* .bg-trans {
+    background-color: transparent;
+} */
