Trash con HOVER, cambio de color en Error404 y Carrito Vacio, al hacer clic en una seccion o en generar orden vuelve la inicio de la pagina

--- a/src/style.css
+++ b/src/style.css
@@ -82,6 +82,12 @@ html { /* Color del Background del HTML (overflow en el eje Y) */
     min-height: 65px;
 }
 /* ================================= CART ================================= */
+.trash {
+    transition: all 0.25s;
+}
+.trash:hover {
+    transform: scale(1.2);
+}
 .col-trash {
     width: 11rem;
 }
