--- a/src/style.css
+++ b/src/style.css
@@ -83,7 +83,7 @@ html { /* Color del Background del HTML (overflow en el eje Y) */
 .platform-size {
     font-size: 16px;
 }
-/* ================================= CART ================================= */
+/* ================================= CART & CHECKOUT ================================= */
 .trash {
     transition: all 0.25s;
 }
@@ -92,6 +92,20 @@ html { /* Color del Background del HTML (overflow en el eje Y) */
 }
 .col-trash {
     width: 11rem;
+}
+.width-table {
+    width: 75vw;
+}
+.width-img-cart {
+    width: 100px;
+}
+.font-cart-head {
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.width-img-checkout {
+    width: 80px;
 }
 /* ================================= MEDIA QUERIES ================================= */
 @media (min-width: 768px) and (max-width: 1439.98px){
@@ -113,9 +127,34 @@ html { /* Color del Background del HTML (overflow en el eje Y) */
     .description-size {
         font-size: 0.7em;
     }
+    .width-img-cart {
+        width: 80px;
+    }
+    .font-cart-head {
+        font-size: 16px;
+    }
 }
 @media (max-width: 767.98px){
-    .w-card-custom {
+    .width-card {
         width: 80%;
+    }
+    .img-size {
+        width: 80vw;
+        margin-bottom: 20px;
+    }
+    .width-table {
+        width: 100vw;
+    }
+    .width-img-cart {
+        width: 60px;
+    }
+    .font-cart-head {
+        font-size: 12px;
+    }
+    .font-cart-body {
+        font-size: 10px;
+    }
+    .width-img-checkout {
+        width: 50px;
     }
 }
